--- a/src/main/resources/static/css/lecturer-style.css
+++ b/src/main/resources/static/css/lecturer-style.css
@@ -42,6 +42,7 @@ header > * {
 }
 #background-pic-name{
 	background-color: #705AA6;
+	padding-bottom: 10px;
 }
 #background-pic-name>p{
 	text-align: center;
@@ -57,6 +58,7 @@ header > * {
 	align-items: center;
 	justify-content: center;
 	border-radius: 8%;
+	margin: auto;
 }
 #content {
 	left: 50px;
