--- a/src/main/resources/templates/courses.html
+++ b/src/main/resources/templates/courses.html
@@ -14,7 +14,7 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/filters.js" th:src="@{/js/filters.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
 </head>
-<body onload="checkRedirect(); setDataType('subject', 'id', 1, 1); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); submitSearch(); 
+<body onload="checkRedirect(); setDataType('subject', 'subjectId', 1, 1); loaderInit(); displayUsername(); addTokenToForm('search'); addTokenToForm('newform'); addTokenToForm('updateform'); submitSearch(); 
 	makeRequest('/get_subject_filters',[], function(data){
 		addOptionsToFilter('lect-options', data[0], true, 1, true);
 		addOptionsToFilter('major-options', data[1], true, 1, true);
@@ -39,7 +39,7 @@
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_subjects" id="search" method="post" target="dataframe">
+				<form action="/get_subjects" id="search" method="post" target="@dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -140,7 +140,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_subject" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_subject" id="newform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 					<label for="name">Ime:</label><input type="text" name="name" required>
 					<label for="espb">ESPB:</label><input type="number" min="0" name="espb" required>
 					<label for="year">Godina:</label><input type="number" min="1" max="4" name="year" required>
@@ -174,9 +174,9 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_subject" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
-					<label for="new-id">ID:</label><input type="text" name="new-id" required>
-					<label for="name">Ime:</label><input type="text" name="name" required>
+				<form action="/update_subject" id="updateform" method="post" target="@sendframe" class="pad-medium wide new-grid">
+					<label for="new-subjectId">ID:</label><input type="text" name="new-subjectId" required>
+					<label for="subjectName">Ime:</label><input type="text" name="subjectName" required>
 					<label for="espb">ESPB:</label><input type="number" min="0" name="espb" required>
 					<label for="year">Godina:</label><input type="number" min="1" max="4" name="year" required>
 
@@ -201,7 +201,7 @@
 					<input type="hidden" name="" id="updated_id" required>
 				</form>
 				<div class="flex-row wide pad-medium">
-					<button type="submit" form="updateform">Submit</button>
+					<button type="submit" form="updateform" onsubmit="toggleElement(this.parentNode.parentNode.parentNode);">Submit</button>
 					<button type="reset" form="updateform">Clear</button>
 				</div>
 			</div>
@@ -209,19 +209,19 @@
 		<div id="update-self">
 			<div class="flex-center">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
-				<form id="userform" action="/update_user" target="_blank" method="post" class="grid">
+				<form id="userform" action="/update_user" target="@sendframe" method="post" class="grid" onsubmit="toggleElement(this.parentNode.parentNode); updateUName();">
 					<h2>Update user:</h2><br>
 					<input type="hidden" name="username" id="update-uname">
 					<label for="new-username">Change username:</label>
 					<input type="text" name="new_username">
 					<label for="new-password">Change password:</label>
 					<input type="password" name="new_password">
-					<input type="submit" value="Submit" onclick="toggleElement(this.parentNode.parentNode.parentNode);">
+					<input type="submit" value="Submit">
 				</form>
 			</div>
 		</div>
-		<iframe src="" name="sendframe" id="sendframe"></iframe>
-		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
+		<iframe src="" name="@sendframe" id="@sendframe"></iframe>
+		<iframe src="" name="@dataframe" id="@dataframe" onload="parseData();"></iframe>
 	</div>
 </body>
 </html>
