--- a/src/main/resources/templates/exams.html
+++ b/src/main/resources/templates/exams.html
@@ -16,7 +16,7 @@
 	<script type="text/javascript" language="Javascript" src="../static/js/filters.js" th:src="@{/js/filters.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
 </head>
-<body onload="checkRedirect(); displayUsername(); addTokenToForm('new-examform'); addTokenToForm('new-deadlineform');
+<body onload="checkRedirect(); displayUsername(); addTokenToForm('new-examform'); addTokenToForm('new-deadlineform'); loaderInit();
 
 		makeRequest('/get_exam_dropdown', [], function(data){
 			addOptionsToFilter('new-lecturer-options', data[0], false, 0, true);
@@ -75,7 +75,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_exam" id="new-examform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_exam" id="new-examform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 						<label for="subject_id">Predmet:</label>
 						<div class="dropdown no-auto-submit">
 							<input name="subject_id" value="" minlength="1" required>
@@ -103,7 +103,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_exam_deadline" id="new-deadlineform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_exam_deadline" id="new-deadlineform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 						<label for="name">Ime:</label><input type="text" name="name" required>
 						<label for="start_date">Traje od:</label><input type="date" name="start_date" required>
 						<label for="end_date">Do:</label><input type="date" name="end_date" required>
@@ -119,19 +119,19 @@
 		<div id="update-self">
 			<div class="flex-center">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
-				<form id="userform" action="/update_user" target="_blank" method="post" class="grid">
+				<form id="userform" action="/update_user" target="@sendframe" method="post" class="grid" onsubmit="toggleElement(this.parentNode.parentNode); updateUName();">
 					<h2>Update user:</h2><br>
 					<input type="hidden" name="username" id="update-uname">
 					<label for="new-username">Change username:</label>
 					<input type="text" name="new_username">
 					<label for="new-password">Change password:</label>
 					<input type="password" name="new_password">
-					<input type="submit" value="Submit" onclick="toggleElement(this.parentNode.parentNode.parentNode);">
+					<input type="submit" value="Submit">
 				</form>
 			</div>
 		</div>
-		<iframe src="" name="sendframe" id="sendframe"></iframe>
-		<iframe src="" name="dataframe" id="dataframe"></iframe>
+		<iframe src="" name="@sendframe" id="@sendframe"></iframe>
+		<iframe src="" name="@dataframe" id="@dataframe"></iframe>
 	</div>
 </body>
 </html>
