--- a/src/main/resources/templates/majors.html
+++ b/src/main/resources/templates/majors.html
@@ -30,7 +30,7 @@
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_all_majors" id="search" method="post" target="dataframe">
+				<form action="/get_all_majors" id="search" method="post" target="@dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -57,7 +57,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_major" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_major" id="newform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 					<label for="name">Ime:</label><input type="text" name="name" required>
 				</form>
 				<div class="flex-row wide pad-medium">
@@ -71,7 +71,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_major" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/update_major" id="updateform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 					<label for="new-id">ID:</label><input type="text" name="new-id" required>
 					<label for="name">Ime:</label><input type="text" name="name" required>
 					<input type="hidden" name="" id="updated_id" required>
@@ -85,18 +85,19 @@
 		<div id="update-self">
 			<div class="flex-center">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
-				<form id="userform" action="/update_user" target="_blank" method="post" class="grid">
+				<form id="userform" action="/update_user" target="@sendframe" method="post" class="grid" onsubmit="toggleElement(this.parentNode.parentNode); updateUName();">
 					<h2>Update user:</h2><br>
 					<input type="hidden" name="username" id="update-uname">
 					<label for="new-username">Change username:</label>
 					<input type="text" name="new_username">
 					<label for="new-password">Change password:</label>
 					<input type="password" name="new_password">
-					<input type="submit" value="Submit" onclick="toggleElement(this.parentNode.parentNode.parentNode);">
+					<input type="submit" value="Submit">
 				</form>
 			</div>
 		</div>
-		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
+		<iframe src="" name="@sendframe" id="@sendframe"></iframe>
+		<iframe src="" name="@dataframe" id="@dataframe" onload="parseData();"></iframe>
 	</div>
 </body>
 </html>
