--- a/src/main/resources/templates/students.html
+++ b/src/main/resources/templates/students.html
@@ -38,7 +38,7 @@
 		</header>
 		<div id="content">
 			<div id="content-header">
-				<form action="/get_students" id="search" method="post" target="dataframe">
+				<form action="/get_students" id="search" method="post" target="@dataframe">
 					<input type="text" id="searchbar" value="" placeholder="Search..." oninput="fillTable();">
 
 					<div class="form-element">
@@ -121,7 +121,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/add_student" id="newform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/add_student" id="newform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 						<label for="first_name">Ime:</label><input type="text" name="first_name" required>
 						<label for="last_name">Prezime:</label><input type="text" name="last_name" required>
 						<label for="year">Godina upisa:</label><input type="number" min="2000" max="2100" name="year" required>
@@ -148,7 +148,7 @@
 			<div class="flex-col size-max">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
 				<br>
-				<form action="/update_student" id="updateform" method="post" target="sendframe" class="pad-medium wide new-grid">
+				<form action="/update_student" id="updateform" method="post" target="@sendframe" class="pad-medium wide new-grid">
 					<label for="firstName">Ime:</label><input type="text" name="firstName" required>
 					<label for="lastName">Prezime:</label><input type="text" name="lastName" required>
 					<label for="new-index">Indeks:</label><input type="text" name="new-index" required>
@@ -175,19 +175,19 @@
 		<div id="update-self">
 			<div class="flex-center">
 				<div class="quit" onclick="toggleElement(this.parentNode.parentNode);">&#x00D7;</div>
-				<form id="userform" action="/update_user" target="_blank" method="post" class="grid">
+				<form id="userform" action="/update_user" target="@sendframe" method="post" class="grid" onsubmit="toggleElement(this.parentNode.parentNode); updateUName();">
 					<h2>Update user:</h2><br>
 					<input type="hidden" name="username" id="update-uname">
 					<label for="new-username">Change username:</label>
 					<input type="text" name="new_username">
 					<label for="new-password">Change password:</label>
 					<input type="password" name="new_password">
-					<input type="submit" value="Submit" onclick="toggleElement(this.parentNode.parentNode.parentNode);">
+					<input type="submit" value="Submit">
 				</form>
 			</div>
 		</div>
-		<iframe src="" name="sendframe" id="sendframe"></iframe>
-		<iframe src="" name="dataframe" id="dataframe" onload="parseData();"></iframe>
+		<iframe src="" name="@sendframe" id="@sendframe"></iframe>
+		<iframe src="" name="@dataframe" id="@dataframe" onload="parseData();"></iframe>
 	</div>
 </body>
 </html>
