--- a/src/main/resources/static/css/grade-style.css
+++ b/src/main/resources/static/css/grade-style.css
@@ -12,14 +12,9 @@ header {
 	justify-content: flex-start;
 	position: relative;
 }
+
 header > * {
 	padding: 15px;
-}
-#wrapper {
-	height: 100%;
-	width: 100%;
-	background-repeat: no-repeat;
-	background-size: 100% 100%;
 }
 #user {
 	position: absolute;
@@ -35,40 +30,16 @@ header > * {
 	max-width: 40px;
 	max-height: 40px;
 }
-#picture-info{
-	margin: auto;
-	width: 30%;
-	position: relative;
-}
-#background-pic-name{
-	background-color: #705AA6;
-	padding-bottom: 10px;
-}
-#background-pic-name>p{
-	text-align: center;
-	padding-bottom: 10px;
-}
-#user-img-info{
-	padding: 10px;
-	width: 35%;
-	height: 35%;
-	margin-left: 25%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	border-radius: 8%;
-	margin: auto;
-}
 #content {
 	left: 50px;
 	right: 50px;
 	margin-left: auto;
 	margin-right: auto;
+	padding: 10px;
 }
 table {
 	padding: 10px;
-	float: center;
+	float: left;
 }
 
 th {
@@ -90,6 +61,7 @@ html, body {
 	margin: 0;
 	background-color: var(--color-light);
 }
+
 a, p, h1, h2, h3, label, input, ::placeholder {
 	font-family: Century Gothic, Arial, sans-serif;
 }
@@ -97,50 +69,33 @@ a, p, h1, h2, h3, label, input, ::placeholder {
 h1 {
 	font-size: 16px;
 }
-#table1{
-	padding: 5px;
-	background-color: #907AD6;
-	width: 30%;
-	margin: auto;
+
+#wrapper {
+	height: 100%;
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: 100% 100%;
 }
-#table2{
+#tableGrade{
 	width: 100%;
 	float: left;
-	position: absolute;
-	top: 54%;
-}
-#table2>tbody>tr>td{
-	background-color: var(--color-highlight2) !important;
-}
-
-#table2>tbody>tr>th{
-	background-color: var(--color-highlight) !important;
-}
-#table3{
-	width: 100%;
-	float: left;
-	position: absolute;
-	top: 54%;
-}
-#table3>tbody>tr>td{
-	background-color: var(--color-highlight2) !important;
-}
-
-#table3>tbody>tr>th{
-	background-color: var(--color-highlight) !important;
-}
-
-.button{
+	position: relative;
 	text-align: center;
-	display: inline-block;
-	font-size: 20px;
-	background-color: var(--color-highlight);
-	cursor: pointer;
-	border: none;
-	padding: 10px;
 }
-.buttons{
-	padding: 20px;
-	margin-left: 42%;
-	position: absolute;
+#tableGrade>tbody>tr>td{
+	background-color: var(--color-highlight2) !important;
+}
+
+#tableGrade>tbody>tr>th{
+	background-color: var(--color-highlight) !important;
+}
+.buttonPrihvati{
+	text-align: center;
+	font-size: 20px;
+	cursor: pointer;
+	background-color: var(--color-highlight2) !important;
+	margin-left: 86%;
+}
+#points{
+	color: black;
 }
