--- a/src/main/resources/templates/exams-registration.html
+++ b/src/main/resources/templates/exams-registration.html
@@ -1,61 +1,41 @@
 <!DOCTYPE html>
+<html>
 <head>
 	<link rel="stylesheet" type="text/css" href="../static/css/style.css" th:href="@{/css/style.css}"/>
-	<link rel="stylesheet" type="text/css" href="../static/css/lecturer-style.css" th:href="@{/css/lecturer-style.css}"/>
+	<link rel="stylesheet" type="text/css" href="../static/css/exams-registration.css" th:href="@{/css/exams-registration.css}"/>
 	<link rel="icon" type="image/x-icon" href="../static/favicon.ico" th:href="@{/favicon.ico}">
 	<meta charset="utf-8">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600,800' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
-	<script type="text/javascript" language="Javascript" src="../static/js/showTable.js" th:src="@{/js/showTable.js}"></script>
-	<script type="text/javascript" language="Javascript" src="../static/js/lecturer-loader.js" th:src="@{/js/lecturer-loader.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
-	<script type="text/javascript" language="Javascript" src="../static/js/ui.js" th:src="@{/js/ui.js}"></script>
 </head>
-
-<body onload = "checkRedirect(); getIndex(); init(); displayUsername('update-uname');">
+<body onload="checkRedirect(); getIndex();">
 	<div id="background"></div>
-	<div id = "wrapper">
+	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
-			<h1>Lecturer</h1>
+			<h1>Student</h1>
 			<div id="user">
 				<p><b><span id = "Ime"></span> <span id = "Prezime"></span></b></p>
-				<p id = "user-name" style = "display: none;"></p>
 				<img src="../static/images/user-img.bmp" id="user-img" th:src="@{/images/user-img.bmp}"/>
 				<div id="user-options">
 					<button type="button" onclick="toggleElementById('update-self');">Edit user</button>
-					<button type="button" onclick="makeRequest('/logout_req', [], function(){window.location.replace('/login');});">Log out</button>
+					<button type="button" onclick="makeRequest('/logout_req','sendframe', [], function(){window.location.replace('/login');});">Log out</button>
 				</div><!--close user options-->
 			</div><!--close user-->
 		</header>
 		<div id = "content">
-			<div id = "picture-info">
-				<div id = "background-pic-name">
-					<img src="../static/images/user-img.bmp" id="user-img-info" th:src="@{/images/user-img.bmp}"/>
-					<p><b><span id = "Ime1"></span> <span id = "Prezime1"></span></b></p>
-				</div><!--close background picture name-->
-			</div><!--close picture info-->
-				<table id = "table1">
-					<tr>
-						<th>Titula</th>
-					</tr>
-					<tr>
-						<td id = "Titula"></td>
-					</tr>
-				</table><!--close table 1-->
-			<div class = "buttons">
-				<input type="button" class = "button" name = "button4" value="Predmeti" onclick='showTable2();'>
-				<input type="button" class = "button" name = "button5" value="Ispiti" onclick='showTable3();'>
-			</div>
-			<table id = "table2">
+			<table id = "tableExams">
 				<tr>
-					<th colspan = "5">Predmeti</th>
+					<th colspan = "6">Prijava ispita</th>
 				</tr>
 				<tr>
 					<th>Predmet</th>
 					<th>IDPredmet</th>
 					<th>Godina</th>
 					<th>ESPB</th>
-					<th>Smer</th>
+					<th>Profesor</th>
+					<th>Prijavi ispit</th>
 				</tr>
 				<tr>
 					<td></td>
@@ -63,23 +43,19 @@
 					<td></td>
 					<td></td>
 					<td></td>
+					<td><input type="button" class = "buttonPrijava" name = "button1" value="Prijavi" onclick=''></td>
 				</tr>
-			</table><!--close table 2-->
-		<table id = "table3" style = "visibility: hidden;">
-				<tr>
-					<th colspan = "3">Ispitni rokovi</th>
-				</tr>
-				<tr>
-					<th>Predmet</th>
-					<th>IDPredmet</th>
-					<th>Datum</th>
-				</tr>
-				<tr>
-					<td></td>
-					<td></td>
-					<td></td>
-				</tr>
-			</table><!--close table 3-->
+			</table><!--close table 1-->
+		<table id = "tableRegistered">
+			<tr>
+				<th colspan = "2">Prijavljeni predmeti</th>
+			</tr>
+			<tr>
+				<td></td>
+				<td style = "width: 20%;"><input type="button" class = "buttonClear" name = "button2" value="Obrisi" onclick=''></td>
+			</tr>
+		</table>
+		<input type="button" class = "buttonPrihvati" name = "button1" value="Prihvati" onclick=''>
 		</div><!--close content-->
 		<div id="update-self">
 			<div class="flex-center">
@@ -95,6 +71,8 @@
 				</form>
 			</div>
 		</div><!--close self update-->
-		<iframe src="" name="@sendframe" id="@sendframe"></iframe>
 	</div><!--close wrapper-->
+	<iframe src="" name="dataframe" id="dataframe" onload = "parseData()"></iframe>
+	<iframe src="" name="sendframe" id="sendframe"></iframe>
 </body>
+</html>
