Exam registration js file updated

--- a/src/main/resources/templates/grade.html
+++ b/src/main/resources/templates/grade.html
@@ -9,6 +9,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
+	<script type="text/javascript" language="Javascript" src="../static/js/grade.js" th:src="@{/js/grade.js}"></script>
 </head>
 <body onload="getToken(); getIndex();">
 	<div id="background"></div>
