--- a/src/main/resources/templates/exams-registration.html
+++ b/src/main/resources/templates/exams-registration.html
@@ -5,12 +5,12 @@
 	<link rel="stylesheet" type="text/css" href="../static/css/exams-registration.css" th:href="@{/css/exams-registration.css}"/>
 	<link rel="icon" type="image/x-icon" href="../static/favicon.ico" th:href="@{/favicon.ico}">
 	<meta charset="utf-8">
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,600,800' rel='stylesheet' type='text/css'>
 	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 	<script type="text/javascript" language="Javascript" src="../static/js/token.js" th:src="@{/js/token.js}"></script>
 	<script type="text/javascript" language="Javascript" src="../static/js/redirect.js" th:src="@{/js/redirect.js}"></script>
+	<script type="text/javascript" language="Javascript" src="../static/js/exam-registration.js" th:src="@{/js/exam-registration.js}"></script>
 </head>
-<body onload="checkRedirect(); getIndex();">
+<body onload="checkRedirect(); getIndex(); init();">
 	<div id="background"></div>
 	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
@@ -43,16 +43,17 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<td><input type="button" class = "buttonPrijava" name = "button1" value="Prijavi" onclick=''></td>
+					<td><input type="checkbox" class = "Prijava" name = "button1" value="Prijavi"></td>
 				</tr>
 			</table><!--close table 1-->
 		<table id = "tableRegistered">
 			<tr>
-				<th colspan = "2">Prijavljeni predmeti</th>
+				<th>Prijavljeni predmeti</th>
+				<th>IDPredmeta</th>
 			</tr>
 			<tr>
 				<td></td>
-				<td style = "width: 20%;"><input type="button" class = "buttonClear" name = "button2" value="Obrisi" onclick=''></td>
+				<td></td>
 			</tr>
 		</table>
 		<input type="button" class = "buttonPrihvati" name = "button1" value="Prihvati" onclick=''>
