--- a/src/main/resources/templates/lecturer.html
+++ b/src/main/resources/templates/lecturer.html
@@ -46,7 +46,7 @@
 				<input type="button" class = "button" name = "button4" value="Predmeti" onclick='showTable2();'>
 				<input type="button" class = "button" name = "button5" value="Ispiti" onclick='showTable3();'>
 			</div>
-			<table id = "table2">
+			<table id = "table2" style = "display: table;">
 				<tr>
 					<th colspan = "5">Predmeti</th>
 				</tr>
@@ -65,7 +65,7 @@
 					<td></td>
 				</tr>
 			</table><!--close table 2-->
-		<table id = "table3" style = "visibility: hidden;">
+		<table id = "table3" style = "display: none">
 				<tr>
 					<th colspan = "3">Ispitni rokovi</th>
 				</tr>
