--- a/src/main/resources/static/css/lecturer-style.css
+++ b/src/main/resources/static/css/lecturer-style.css
@@ -105,9 +105,7 @@ h1 {
 }
 #table2{
 	width: 100%;
-	float: left;
-	position: absolute;
-	top: 54%;
+	float: left
 }
 #table2>tbody>tr>td{
 	background-color: var(--color-highlight2) !important;
@@ -119,8 +117,6 @@ h1 {
 #table3{
 	width: 100%;
 	float: left;
-	position: absolute;
-	top: 54%;
 }
 #table3>tbody>tr>td{
 	background-color: var(--color-highlight2) !important;
@@ -142,5 +138,9 @@ h1 {
 .buttons{
 	padding: 20px;
 	margin-left: 42%;
-	position: absolute;
+}
+
+a:hover{
+	background-color: mediumpurple;
+	cursor: pointer;
 }
