--- a/src/main/resources/templates/student.html
+++ b/src/main/resources/templates/student.html
@@ -89,7 +89,7 @@
 		</div>
 		</div><!--close div 1-->
 		<div id	= "div2">
-			<table id = "table4" style = "visibility: visible;">
+			<table id = "table4" style = "display: table;">
 				<tr>
 					<th colspan = "6">Upisani Predmeti</th>
 				</tr>
@@ -110,7 +110,7 @@
 					<td></td>
 				</tr>
 			</table><!--close table 4-->
-		<table id = "table5" style = "visibility: hidden;">
+		<table id = "table5" style = "display: none;">
 			<tr>
 				<th colspan = "3">Ispitni rokovi</th>		
 			</tr>
