--- a/src/main/resources/templates/exams-registration.html
+++ b/src/main/resources/templates/exams-registration.html
@@ -14,7 +14,7 @@
 	<div id="background"></div>
 	<div id = "wrapper" style="background-image: url('../images/lowpoly.png');">
 		<header>
-			<h1>Student</h1>
+			<h1><a onclick = "window.location.replace('/student')">Student</a>/Exam registration</h1>
 			<div id="user">
 				<p><b><span id = "Ime"></span> <span id = "Prezime"></span></b></p>
 				<img src="../static/images/user-img.bmp" id="user-img" th:src="@{/images/user-img.bmp}"/>
