Updated exam registration

--- a/src/main/resources/static/css/exams-registration.css
+++ b/src/main/resources/static/css/exams-registration.css
@@ -119,3 +119,10 @@ h1 {
 	background-color: var(--color-highlight2) !important;
 	margin-left: 86%;
 }
+
+#Back{
+	cursor: pointer;
+}
+a:hover{
+	color: blue;
+}
